--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,9 +6,9 @@ logging:
           bot: DEBUG
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://${PGHOST}:${PGPORT}/${POSTGRES_DB}
+    username: ${PGUSER}
+    password: ${PGPASSWORD}
 
 app:
   properties:
