--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,15 +8,14 @@ on:
 
 jobs:
 
-  build-docker-image:
+  build:
     runs-on: ubuntu-latest
     
-    steps:    
+    steps:
     - uses: actions/checkout@v4
-    - name: maven-build 
     - uses: actions/setup-java@v4
       with:
-         distribution: 'temurin'
+         distribution: 'temurin' # See 'Supported distributions' for available options
          java-version: '21'
     - run: mvn clean install -Dmaven.test.skip=true
     
