--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - name: get-pom-version
       id: pom-version
-      uses: CptMokoena/maven-get-version-action@master
+      uses: CptMokoena/maven-get-version-action@1.0.3
       
     - uses: actions/checkout@v4
     - uses: actions/setup-java@v4
