--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,8 @@ jobs:
     - name: get-pom-version
       id: pom-version
       uses: CptMokoena/maven-get-version-action@1.0.3
+      with:
+         path: ../../pom.xml
       
     - uses: actions/checkout@v4
     - uses: actions/setup-java@v4
