--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,13 +16,13 @@ jobs:
       id: pom-version
       uses: CptMokoena/maven-get-version-action@1.0.3
       with:
-         path: ../../
+         path: ../..
       
-    - uses: actions/checkout@v4
-    - uses: actions/setup-java@v4
-      with:
-         distribution: 'temurin' # See 'Supported distributions' for available options
-         java-version: '21'
-    - run: mvn clean install -Dmaven.test.skip=true
+ #   - uses: actions/checkout@v4
+ #   - uses: actions/setup-java@v4
+ #     with:
+  #       distribution: 'temurin' # See 'Supported distributions' for available options
+  #       java-version: '21'
+  #  - run: mvn clean install -Dmaven.test.skip=true
     
 
