--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
       id: pom-version
       uses: CptMokoena/maven-get-version-action@1.0.3
       with:
-         path: ../..
+         path: /
       
  #   - uses: actions/checkout@v4
  #   - uses: actions/setup-java@v4
