--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,8 @@ jobs:
     - name: get-pom-version
       id: pom-version
       uses: CptMokoena/maven-get-version-action@1.0.3
+    - name: test
+      run: echo "${{steps.pom-version.outputs.version}}"
       
  #   - uses: actions/checkout@v4
  #   - uses: actions/setup-java@v4
