--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,12 +18,10 @@ jobs:
       uses: CptMokoena/maven-get-version-action@1.0.3
     - name: test
       run: echo "${{steps.pom-version.outputs.version}}"
-      
- #   - uses: actions/checkout@v4
- #   - uses: actions/setup-java@v4
- #     with:
-  #       distribution: 'temurin' # See 'Supported distributions' for available options
-  #       java-version: '21'
-  #  - run: mvn clean install -Dmaven.test.skip=true
+    - uses: actions/setup-java@v4
+      with:
+         distribution: 'temurin' # See 'Supported distributions' for available options
+         java-version: '21'
+    - run: mvn clean install -Dmaven.test.skip=true
     
 
