--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,5 +23,7 @@ jobs:
          distribution: 'temurin' # See 'Supported distributions' for available options
          java-version: '21'
     - run: mvn clean install -Dmaven.test.skip=true
+    - name: Build the Docker image
+      run: docker build . --build-arg VERSION=${{steps.pom-version.outputs.version}} --tag dhiman1987/aibot:${{steps.pom-version.outputs.version}}-amd64
     
 
