--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,15 @@ jobs:
          distribution: 'temurin' # See 'Supported distributions' for available options
          java-version: '21'
     - run: mvn clean install -Dmaven.test.skip=true
-    - name: Build the Docker image
-      run: docker build . --build-arg VERSION=${{steps.pom-version.outputs.version}} --tag dhiman1987/aibot:${{steps.pom-version.outputs.version}}-amd64
-    
+    - name: Log in to Docker Hub
+      uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+          push: true
+          buildArgs: VERSION=${{steps.pom-version.outputs.version}}
+          tags: ${{ secrets.DOCKER_USERNAME }}/aibot:${{steps.pom-version.outputs.version}}-amd64
 
