--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,10 +28,8 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-          push: true
-          buildArgs: VERSION=${{steps.pom-version.outputs.version}}
-          tags: ${{ secrets.DOCKER_USERNAME }}/aibot:${{steps.pom-version.outputs.version}}-amd64
+    - name: Build the Docker image
+      run: docker build . --build-arg VERSION=${{steps.pom-version.outputs.version}} --tag ${{ secrets.DOCKER_USERNAME }}/aibot:${{steps.pom-version.outputs.version}}-amd64
+    - name: Push the Docker image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/aibot:${{steps.pom-version.outputs.version}}-amd64
 
